# jRust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  MVP-PLAN.md  Makefile  PLAN.md  README.md  language-spec-and-architecture.md  test-init.bat  test-init.sh  test-project.bat  test-project.sh
.github/: copilot-instructions.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  project.rs
crates/cli/src/commands/: build.rs  check.rs  init.rs  mod.rs  run.rs
crates/cli/tests/: cli_tests.rs
crates/compiler_core/: Cargo.toml
crates/compiler_core/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/tests/: lib_tests.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs
crates/std/tests/: lib_tests.rs
crates/transpiler_core/: Cargo.toml
crates/transpiler_core/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/transpiler_core/src/codegen/: helpers.rs
crates/transpiler_core/tests/: codegen_tests.rs  lexer_tests.rs  module_tests.rs  parser_tests.rs
docs/: 00-index.md  01-introduction.md  02-get-started.md  03-variables.md  04-primitive-types.md  05-functions.md  06-comments.md  07-ownership-and-borrowing.md  08-strings.md  09-output.md  10-control-flow.md  10-variables.md  11-arrays.md  12-advanced-types.md  13-advanced.md  14-troubleshooting.md  15-array-methods.md  16-module-system.md  17-error-handling.md  language-syntax.md
