[workspace]
resolver = "2"
members = [
    "crates/transpiler_core",
    "crates/runtime",
    "crates/std",
    "crates/cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["jRust Contributors"]
license = "MIT"
repository = "https://github.com/ifeora-emeka/jRust"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
