[package]
name = "jrust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "jrust"
path = "src/main.rs"

[[bin]]
name = "jrust-demo"
path = "src/bin/demo.rs"

[dependencies]
jrust_transpiler_core = { path = "../transpiler_core" }
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
